# api.pdfconverterai.com

./: .gitignore  README.md  create_test_image.py  gunicorn.conf.py  openapi.json  openapi_rapidapi.json  paraphrase_response_4.json  paraphrase_response_5.json  pyproject.toml  pyproject.toml.bak  requirements-freeze.txt  requirements.txt  requirements.txt.bak  test_distilbert.py  test_grammar.py  test_nltk.py  test_ocr.py  test_rake.py  test_response_2.json  test_sentiment.py  test_summary.py  test_t5.py  test_t5_model.py  test_t5_small.py  test_yt_dlp.py  web_summarize_response_2.json
app/: main.py  worker.py
app/config/: cookies.txt
app/core/: config.py  database.py  logger.py  security.py  storage.py
app/routers/: ai_tools.py  binary_tools.py  calculators.py  categories.py  cyber_security.py  debug.py  downloaders.py  files.py  image.py  jobs.py  miscellaneous.py  pdf.py  seo_tools.py  text.py  tools.py  unit_converters.py  video.py  web_tools.py
app/schemas/: common.py  file.py  job.py
app/services/ai_tools/: sentiment.py
app/services/calculators/: age.py  bmi.py  financial_plan.py  loan.py  percentage.py
app/services/files/: service.py
app/services/image/: caption.py  ocr.py
app/services/jobs/: processor.py  service.py
app/services/pdf/: convert.py  pdf_to_word.py  processors.py  summarize.py
app/services/seo/: keyword_density.py  keyword_extract.py
app/services/text/: count.py  grammar.py  paraphrase.py  sentiment.py  summarize.py
app/services/unit_converters/: contextual_convert.py
app/services/video/: youtube_metadata.py
app/services/web_tools/: summarize.py
app/shared/: responses.py
tests/: conftest.py  test_files_jobs_pdf_flow.py  test_processor_base.py  test_schema_objectid_serialization.py  test_storage_cleanup.py  test_worker_retry.py
