[tool.poetry]
name = "pdfconverterai-api"
version = "0.1.0"
description = "FastAPI-based API for PDFConverterAI.Com and RapidAPI"
authors = ["MuazamAbbas <sendtomuazam110@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
annotated-types = "^0.7.0"
anyio = "^4.9.0"
arq = "^0.28.0"
bcrypt = "^4.3.0"
beautifulsoup4 = "^4.13.4"
certifi = "^2022.12.7"
cffi = "^1.17.1"
charset-normalizer = "^2.1.1"
click = "^8.2.0"
cryptography = "^44.0.3"
Deprecated = "^1.2.18"
dnspython = "^2.7.0"
ecdsa = "^0.19.1"
fastapi = "^0.115.12"
filelock = "^3.13.1"
fsspec = "^2024.6.1"
gunicorn = "^23.0.0"
h11 = "^0.16.0"
huggingface-hub = "^0.31.2"
idna = "^3.4"
Jinja2 = "^3.1.4"
joblib = "^1.5.0"
language-tool-python = "^2.9.3"
limits = "^5.1.0"
MarkupSafe = "^2.1.5"
motor = "^3.7.0"
mpmath = "^1.3.0"
networkx = "^3.3"
nltk = "^3.9.1"
numpy = "^2.1.2"
opencv-python-headless = "^4.11.0.86"
packaging = "^24.1"
passlib = "^1.7.4"
pdf2docx = "^0.5.8"
pillow = "^11.0.0"
pyasn1 = "^0.4.8"
pycparser = "^2.22"
pydantic = "^2.11.4"
pydantic-settings = "^2.9.1"
pydantic_core = "^2.33.2"
pymongo = "^4.13.0"
PyMuPDF = "^1.25.5"
PyPDF2 = "^3.0.1"
pytesseract = "^0.3.13"
python-docx = "^1.1.2"
python-dotenv = "^1.1.0"
python-jose = "^3.4.0"
python-multipart = "^0.0.20"
PyYAML = "^6.0.2"
regex = "^2024.11.6"
requests = "^2.28.1"
rsa = "^4.9.1"
safetensors = "^0.5.3"
scikit-learn = "^1.6.1"
scipy = "^1.15.3"
setuptools = "^70.2.0"
six = "^1.17.0"
slowapi = "^0.1.9"
sniffio = "^1.3.1"
starlette = "^0.46.2"
sympy = "^1.13.3"
threadpoolctl = "^3.6.0"
tokenizers = "^0.21.1"
torch = { version = "2.7.0+cpu", source = "pytorch" }
tqdm = "^4.66.5"
transformers = "^4.51.3"
typing-extensions = "^4.12.2"
typing-inspection = "^0.4.0"
urllib3 = "^1.26.13"
uvicorn = "^0.34.2"
wheel = "^0.45.1"
wrapt = "^1.17.2"
yt-dlp = "^2025.4.30"
keybert = "^0.9.0"
sentence-transformers = "^4.1.0"
rich = "^14.0.0"
markdown-it-py = "^3.0.0"
mdurl = "^0.1.2"
pygments = "^2.19.1"

[tool.poetry.group.dev.dependencies]
# Test scaffolding for the files/jobs/pdf lifecycle work (Handbook Part D.1/C.7).
# Not previously present - this backend had no automated test suite at all.
pytest = "^8.4.2"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Motor's AsyncIOMotorClient (app.core.database.db) is created once at
# import time and binds to whichever event loop first uses it; pytest-asyncio's
# default is a fresh event loop per test function, which breaks Motor on the
# second test ("Event loop is closed"). Pin one event loop for the whole
# session instead, since `db` is a shared, process-lifetime singleton exactly
# like it is in the real running app.
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "pypi"
url = "https://pypi.org/simple"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.main:app"

